--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -4,13 +4,24 @@ services:
     build:
       context: .
       dockerfile: ./example/cs/Dockerfile
-    image: ocpp-go-1.6/central-system:latest
+    image: ldonini/ocpp1.6-central-system:latest
     container_name: central-system
     ports:
       - "8887:8887"
+    networks:
+      - sim
   charge_point:
+    environment:
+      - CLIENT_ID=chargePointSim
+      - CENTRAL_SYSTEM_URL=ws://central_system:8887
     build:
       context: .
       dockerfile: ./example/cp/Dockerfile
-    image: ocpp-go-1.6/charge-point:latest
+    image: ldonini/ocpp1.6-charge-point:latest
     container_name: charge-point
+    networks:
+      - sim
+
+networks:
+  sim:
+    driver: bridge
