--- a/.travis.yml
+++ b/.travis.yml
@@ -18,16 +18,16 @@ jobs:
         - go build ./...
     - stage: publish
       script:
-        - docker build -t "$DOCKER_IMAGE_CS:latest" -f example/cs/Dockerfile .
-        - docker build -t "$DOCKER_IMAGE_CP:latest" -f example/cp/Dockerfile .
+        - docker build -t ldonini/ocpp1.6-central-system:latest -f example/cs/Dockerfile .
+        - docker build -t ldonini/ocpp1.6-charge-point:latest -f example/cp/Dockerfile .
         - echo "$DOCKER_PASSWORD" | docker login -u "$DOCKER_USERNAME" --password-stdin
         - docker push "$DOCKER_IMAGE_CS:latest"
         - docker push "$DOCKER_IMAGE_CP:latest"
       if: branch == master
     - stage: release
       script:
-        - docker build -t "$DOCKER_IMAGE_CS:$TRAVIS_TAG" -f example/cs/Dockerfile .
-        - docker build -t "$DOCKER_IMAGE_CP:$TRAVIS_TAG" -f example/cp/Dockerfile .
+        - docker build -t "ldonini/ocpp1.6-central-system:$TRAVIS_TAG" -f example/cs/Dockerfile .
+        - docker build -t "ldonini/ocpp1.6-charge-point:$TRAVIS_TAG" -f example/cp/Dockerfile .
         - echo "$DOCKER_PASSWORD" | docker login -u "$DOCKER_USERNAME" --password-stdin
         - docker push ocpp-go-1.6-central-system
         - docker push ocpp-go-1.6-charge-point
