--- a/.travis.yml
+++ b/.travis.yml
@@ -8,7 +8,7 @@ notifications:
     on_success: never
 stages:
   - test
-  - publish
+  - publish_latest
   - release
 jobs:
   include:
@@ -16,19 +16,19 @@ jobs:
       script:
         - go test ./...
         - go build ./...
-    - stage: publish
+    - stage: publish_latest
       script:
         - docker build -t ldonini/ocpp1.6-central-system:latest -f example/cs/Dockerfile .
         - docker build -t ldonini/ocpp1.6-charge-point:latest -f example/cp/Dockerfile .
         - echo "$DOCKER_PASSWORD" | docker login -u "$DOCKER_USERNAME" --password-stdin
-        - docker push "$DOCKER_IMAGE_CS:latest"
-        - docker push "$DOCKER_IMAGE_CP:latest"
+        - docker push ldonini/ocpp1.6-central-system:latest
+        - docker push ldonini/ocpp1.6-charge-point:latest
       if: branch == master
     - stage: release
       script:
         - docker build -t "ldonini/ocpp1.6-central-system:$TRAVIS_TAG" -f example/cs/Dockerfile .
         - docker build -t "ldonini/ocpp1.6-charge-point:$TRAVIS_TAG" -f example/cp/Dockerfile .
         - echo "$DOCKER_PASSWORD" | docker login -u "$DOCKER_USERNAME" --password-stdin
-        - docker push ocpp-go-1.6-central-system
-        - docker push ocpp-go-1.6-charge-point
+        - docker push "ldonini/ocpp-go-1.6-central-system:$TRAVIS_TAG"
+        - docker push "ldonini/ocpp-go-1.6-charge-point:$TRAVIS_TAG"
       if: tag IS present
