Enable go modules

--- a/.travis.yml
+++ b/.travis.yml
@@ -14,6 +14,7 @@ jobs:
   include:
     - stage: test
       script:
+        - export GO111MODULE=on
         - go test ./...
         - go build ./...
     - stage: publish_latest
