Test files directly in ci script

--- a/.travis.yml
+++ b/.travis.yml
@@ -14,8 +14,10 @@ jobs:
   include:
     - stage: test
       script:
-        - go build ./...
-        - go test ./...
+        - go test ./ws
+        - go test ./ocppj_test
+        - go test ./ocpp1.6_test
+        - go test ./ocpp2.0_test
     - stage: publish_latest
       script:
         - docker build -t ldonini/ocpp1.6-central-system:latest -f example/cs/Dockerfile .
