--- a/example/cs1.6/Dockerfile
+++ b/example/cs1.6/Dockerfile
@@ -9,13 +9,16 @@ COPY . .
 # Fetch dependencies.
 RUN go mod download
 # Build the binary.
-RUN CGO_ENABLED=0 GOOS=linux GOARCH=amd64 go build -ldflags="-w -s" -o /go/bin/charge_point example/cp/charge_point_sim.go
+RUN CGO_ENABLED=0 GOOS=linux GOARCH=amd64 go build -ldflags="-w -s" -o /go/bin/central_system example/cs1.6/central_system_sim.go
 
 ############################
 # STEP 2 build a small image
 ############################
 FROM scratch
 
-COPY --from=builder /go/bin/charge_point /bin/charge_point
+COPY --from=builder /go/bin/central_system /bin/central_system
 
-CMD [ "charge_point" ]
+# Port on which the service will be exposed.
+EXPOSE 8887
+
+CMD [ "central_system" ]
