--- a/example/cs1.6/Dockerfile
+++ b/example/cs1.6/Dockerfile
@@ -9,12 +9,12 @@ COPY . .
 # Fetch dependencies.
 RUN go mod download
 # Build the binary.
-RUN CGO_ENABLED=0 GOOS=linux GOARCH=amd64 go build -ldflags="-w -s" -o /go/bin/central_system example/cs1.6/central_system_sim.go
+RUN GOOS=linux GOARCH=amd64 go build -ldflags="-w -s" -o /go/bin/central_system example/cs1.6/central_system_sim.go
 
 ############################
 # STEP 2 build a small image
 ############################
-FROM scratch
+FROM alpine
 
 COPY --from=builder /go/bin/central_system /bin/central_system
 
