--- a/.travis.yml
+++ b/.travis.yml
@@ -17,7 +17,11 @@ jobs:
     - stage: test
       script:
         - go build ./...
-        - go test ./...
+#        - go test ./...
+        - go get golang.org/x/tools/cmd/cover
+        - go get github.com/mattn/goveralls
+        - go test -v -covermode=count -coverprofile=coverage.out ./...
+        - goveralls -coverprofile=coverage.out -service=travis-ci -repotoken $COVERALLS_TOKEN
     - stage: publish_latest
       script:
         - docker build -t ldonini/ocpp1.6-central-system:latest -f example/cs1.6/Dockerfile .
