--- a/.travis.yml
+++ b/.travis.yml
@@ -21,8 +21,8 @@ jobs:
         - go get golang.org/x/tools/cmd/cover
         - go get github.com/mattn/goveralls
         - go test ./ws ./ocppj -v -covermode=count -coverprofile=coverage.out
-        - go test -v -covermode=count -coverprofile=ocpp16.out -coverpkg=github.com/lorenzodonini/ocpp-go/ocpp1.6 github.com/lorenzodonini/ocpp-go/ocpp1.6_test
-        - go test -v -covermode=count -coverprofile=ocpp20.out -coverpkg=github.com/lorenzodonini/ocpp-go/ocpp2.0 github.com/lorenzodonini/ocpp-go/ocpp2.0_test
+        - go test -v -covermode=count -coverprofile=ocpp16.out -coverpkg=github.com/lorenzodonini/ocpp-go/ocpp1.6/... github.com/lorenzodonini/ocpp-go/ocpp1.6_test
+        - go test -v -covermode=count -coverprofile=ocpp20.out -coverpkg=github.com/lorenzodonini/ocpp-go/ocpp2.0/... github.com/lorenzodonini/ocpp-go/ocpp2.0_test
         - sed '1d;$d' ocpp16.out >> coverage.out
         - sed '1d;$d' ocpp20.out >> coverage.out
         - goveralls -coverprofile=coverage.out -service=travis-ci -repotoken $COVERALLS_TOKEN
