--- a/example/1.6/docker-compose.tls.yml
+++ b/example/1.6/docker-compose.tls.yml
@@ -2,12 +2,12 @@ version: '3'
 services:
   central-system:
     build:
-      context: .
-      dockerfile: example/cs1.6/Dockerfile
+      context: ../..
+      dockerfile: cs/Dockerfile
     image: ldonini/ocpp1.6-central-system:latest
     container_name: central-system
     volumes:
-      - ./certs/central-system:/usr/local/share/certs
+      - ./certs/cs:/usr/local/share/certs
       - ./certs/ca.crt:/usr/local/share/certs/ca.crt
     environment:
       - SERVER_LISTEN_PORT=443
@@ -20,12 +20,12 @@ services:
       - sim
   charge-point:
     build:
-      context: .
-      dockerfile: example/cp1.6/Dockerfile
+      context: ../..
+      dockerfile: cp/Dockerfile
     image: ldonini/ocpp1.6-charge-point:latest
     container_name: charge-point
     volumes:
-      - ./certs/charge-point:/usr/local/share/certs
+      - ./certs/cp:/usr/local/share/certs
       - ./certs/ca.crt:/usr/local/share/certs/ca.crt
     environment:
       - CLIENT_ID=chargePointSim
