Pass CA certificate path to 1.6 central system in docker-compose.tls
Signed-off-by: Lorenzo Donini <lorenzo.donini@motius.de>

--- a/example/1.6/docker-compose.tls.yml
+++ b/example/1.6/docker-compose.tls.yml
@@ -12,6 +12,7 @@ services:
     environment:
       - SERVER_LISTEN_PORT=443
       - TLS_ENABLED=true
+      - CA_CERTIFICATE_PATH=/usr/local/share/certs/ca.crt
       - SERVER_CERTIFICATE_PATH=/usr/local/share/certs/central-system.crt
       - SERVER_CERTIFICATE_KEY_PATH=/usr/local/share/certs/central-system.key
     ports:
