--- a/.travis.yml
+++ b/.travis.yml
@@ -18,7 +18,8 @@ jobs:
       before_install:
         - wget -O toxiproxy-2.1.4.deb https://github.com/Shopify/toxiproxy/releases/download/v2.1.4/toxiproxy_2.1.4_amd64.deb
         - sudo dpkg -i toxiproxy-2.1.4.deb
-        - sudo service toxiproxy start
+        - cp ws/toxiproxy.service /lib/systemd/system/
+        - sudo systemctl toxiproxy start
       script:
         - go build ./...
         - go get golang.org/x/tools/cmd/cover
