--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -11,12 +11,12 @@ jobs:
           go-version: 1.15.x
       - name: Checkout code
         uses: actions/checkout@v2
-      - name: Setup toxiproxy
-        run: |
-          wget -O toxiproxy-2.1.4.deb https://github.com/Shopify/toxiproxy/releases/download/v2.1.4/toxiproxy_2.1.4_amd64.deb
-          sudo dpkg -i toxiproxy-2.1.4.deb
-          sudo cp ws/toxiproxy.service /lib/systemd/system/
-          sudo systemctl start toxiproxy
+#      - name: Setup toxiproxy
+#        run: |
+#          wget -O toxiproxy-2.1.4.deb https://github.com/Shopify/toxiproxy/releases/download/v2.1.4/toxiproxy_2.1.4_amd64.deb
+#          sudo dpkg -i toxiproxy-2.1.4.deb
+#          sudo cp ws/toxiproxy.service /lib/systemd/system/
+#          sudo systemctl start toxiproxy
       - name: Install goveralls
         run: |
           go get golang.org/x/tools/cmd/cover
