--- a/.github/workflows/docker-publish.yml
+++ b/.github/workflows/docker-publish.yml
@@ -1,7 +1,8 @@
 name: Publish examples
 on:
-  branches:
-    - master
+  push:
+    branches:
+      - master
 jobs:
   publish_latest:
     runs-on: ubuntu-latest
