--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -18,10 +18,6 @@ jobs:
           sudo dpkg -i toxiproxy-2.1.4.deb
           sudo cp ws/toxiproxy.service /lib/systemd/system/
           sudo systemctl start toxiproxy
-      - name: Install goveralls
-        run: |
-          go get golang.org/x/tools/cmd/cover
-          go get github.com/mattn/goveralls
       - name: Run tests
         run: |
           go test ./ws ./ocppj -v -covermode=count -coverprofile=coverage.out
@@ -29,7 +25,9 @@ jobs:
           go test -v -covermode=count -coverprofile=ocpp201.out -coverpkg=github.com/lorenzodonini/ocpp-go/ocpp2.0.1/... github.com/lorenzodonini/ocpp-go/ocpp2.0.1_test
           sed '1d;$d' ocpp16.out >> coverage.out
           sed '1d;$d' ocpp201.out >> coverage.out
+      - name: Install goveralls
+        run: go install github.com/mattn/goveralls@latest
       - name: Publish coverage
         env:
           COVERALLS_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-        run: goveralls -coverprofile=coverage.out -service=github -repotoken $COVERALLS_TOKEN
+        run: goveralls -coverprofile=coverage.out -service=github
