Added examples for OCPP 1.6j security extension

--- a/example/1.6/docker-compose.yml
+++ b/example/1.6/docker-compose.yml
@@ -14,6 +14,9 @@ services:
       - sim
     tty: true
   charge-point:
+    depends_on:
+      central-system:
+        condition: service_started
     build:
       context: ../..
       dockerfile: cp/Dockerfile
