--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,23 +1,40 @@
 name: Default CI
-on: [push, pull_request, workflow_dispatch]
+on:
+  push:
+    branches:
+      - main
+    paths-ignore:
+      - "*.md"
+      - "*.sh"
+
+  pull_request:
+    paths-ignore:
+      - "*.md"
+      - "*.sh"
+
+  workflow_dispatch:
+
 jobs:
   # This workflow contains a job called "test", which is run on every push
   test:
     runs-on: ubuntu-latest
     steps:
       - name: Checkout code
-        uses: actions/checkout@v3
+        uses: actions/checkout@v4.1.7
+
       - name: Install Go
-        uses: actions/setup-go@v3
+        uses: actions/setup-go@v5.0.2
         with:
           go-version: ^1.18
           cache: true
+
       - name: Setup toxiproxy
         run: |
           wget -O toxiproxy-2.1.4.deb https://github.com/Shopify/toxiproxy/releases/download/v2.1.4/toxiproxy_2.1.4_amd64.deb
           sudo dpkg -i toxiproxy-2.1.4.deb
           sudo cp ws/toxiproxy.service /lib/systemd/system/
           sudo systemctl start toxiproxy
+
       - name: Run tests
         run: |
           go test ./ws ./ocppj -v -covermode=count -coverprofile=coverage.out
@@ -25,8 +42,10 @@ jobs:
           go test -v -covermode=count -coverprofile=ocpp201.out -coverpkg=github.com/lorenzodonini/ocpp-go/ocpp2.0.1/... github.com/lorenzodonini/ocpp-go/ocpp2.0.1_test
           sed '1d;$d' ocpp16.out >> coverage.out
           sed '1d;$d' ocpp201.out >> coverage.out
+
       - name: Install goveralls
         run: go install github.com/mattn/goveralls@latest
+
       - name: Publish coverage
         env:
           COVERALLS_TOKEN: ${{ secrets.GITHUB_TOKEN }}
