--- a/docker-compose.test.yaml
+++ b/docker-compose.test.yaml
@@ -35,6 +35,6 @@ services:
     command:
       - /bin/bash
       - -c
-      - go test ./ws ./ocppj -v -covermode=count -coverprofile=coverage.out
+      - go test ./ws ./ocppj -v -covermode=count -coverprofile=integration_coverage.out
     volumes:
       - .:/etc/ocpp-go:rw
