--- a/.github/workflows/test.yaml
+++ b/.github/workflows/test.yaml
@@ -1,5 +1,17 @@
 name: Test
-on: [ push, pull_request, workflow_dispatch ]
+on:
+  push:
+    paths-ignore:
+      - "**.md"
+      - LICENSE
+
+  pull_request:
+    paths-ignore:
+      - "**.md"
+      - LICENSE
+
+  workflow_dispatch:
+
 jobs:
   unit:
     runs-on: ubuntu-latest
