Added go caching for faster build times locally

--- a/example/1.6/cs/Dockerfile
+++ b/example/1.6/cs/Dockerfile
@@ -6,10 +6,14 @@ FROM golang:alpine AS builder
 ENV GO111MODULE on
 WORKDIR $GOPATH/src/github.com/lorenzodonini/ocpp-go
 COPY . .
-# Fetch dependencies.
-RUN go mod download
+
+# Leverage build cache by copying go.mod and go.sum first
+COPY go.mod go.sum ./
+RUN --mount=type=cache,target=/root/.cache/go-build go mod download
+RUN go mod verify
+
 # Build the binary.
-RUN go build -ldflags="-w -s" -o /go/bin/central_system example/1.6/cs/*.go
+RUN --mount=type=cache,target="/root/.cache/go-build" go build -ldflags="-w -s" -o /go/bin/central_system example/1.6/cs/*.go
 
 ############################
 # STEP 2 build a small image
