--- a/example/2.0.1/csms/Dockerfile
+++ b/example/2.0.1/csms/Dockerfile
@@ -6,10 +6,14 @@ FROM golang:alpine AS builder
 ENV GO111MODULE on
 WORKDIR $GOPATH/src/github.com/lorenzodonini/ocpp-go
 COPY . .
-# Fetch dependencies.
-RUN go mod download
+
+# Leverage build cache by copying go.mod and go.sum first
+COPY go.mod go.sum ./
+RUN --mount=type=cache,target=/root/.cache/go-build go mod download
+RUN go mod verify
+
 # Build the binary.
-RUN go build -ldflags="-w -s" -o /go/bin/csms example/2.0.1/csms/*.go
+RUN --mount=type=cache,target="/root/.cache/go-build" go build -ldflags="-w -s" -o /go/bin/csms example/2.0.1/csms/*.go
 
 ############################
 # STEP 2 build a small image
