--- a/example/1.6/docker-compose.tls.yml
+++ b/example/1.6/docker-compose.tls.yml
@@ -1,4 +1,4 @@
-version: '3'
+version: '3.9'
 services:
   central-system:
     build:
@@ -15,6 +15,8 @@ services:
       - CA_CERTIFICATE_PATH=/usr/local/share/certs/ca.crt
       - SERVER_CERTIFICATE_PATH=/usr/local/share/certs/central-system.crt
       - SERVER_CERTIFICATE_KEY_PATH=/usr/local/share/certs/central-system.key
+      - METRICS_ENABLED=${METRICS_ENABLED:-false}
+      - METRICS_ADDRESS=${METRICS_ADDRESS:-lgtm-stack:4317}
     ports:
       - "443:443"
     networks:
