--- a/.github/workflows/test.yaml
+++ b/.github/workflows/test.yaml
@@ -19,6 +19,19 @@ jobs:
     steps:
       - name: Checkout code
         uses: actions/checkout@v4.2.2
+      - name: Restore generated mocks
+        id: cache-mocks
+        uses: actions/cache/restore@v4
+        with:
+          path: |
+            ocpp1.6_test/mocks/
+            ocpp2.0.1_test/mocks/
+            ocppj/mocks/
+            ws/mocks/
+          key: ${{ runner.os }}-mocks-${{ github.sha }}
+      - name: Check cache hit
+        if: steps.cache.outputs.cache-hit != 'true'
+        run: exit 1
       - name: Run tests
         run: |
           docker compose -f docker-compose.test.yaml up unit_test --abort-on-container-exit
