--- a/docker-compose.test.yaml
+++ b/docker-compose.test.yaml
@@ -8,7 +8,7 @@ services:
     # The tests might require permissions to write to coverage out files.
     # If you encounter issues with permissions, you can try running the container as root.
     user: root
-    image: cimg/go:1.22.5
+    image: cimg/go:1.24.3
     working_dir: /etc/ocpp-go
     volumes:
       - .:/etc/ocpp-go:rw
@@ -16,14 +16,14 @@ services:
       - /bin/bash
       - -c
       - |
-        go test -v -covermode=count -coverprofile=coverage.out ./ocppj
-        go test -v -covermode=count -coverprofile=ocpp16.out -coverpkg=github.com/lorenzodonini/ocpp-go/ocpp1.6/... github.com/lorenzodonini/ocpp-go/ocpp1.6_test
-        go test -v -covermode=count -coverprofile=ocpp201.out -coverpkg=github.com/lorenzodonini/ocpp-go/ocpp2.0.1/... github.com/lorenzodonini/ocpp-go/ocpp2.0.1_test
+        go test -race -v -covermode=atomic -coverprofile=coverage.out ./ocppj
+        go test -race -v -covermode=atomic -coverprofile=ocpp16.out -coverpkg=github.com/lorenzodonini/ocpp-go/ocpp1.6/... github.com/lorenzodonini/ocpp-go/ocpp1.6_test
+        go test -race -v -covermode=atomic -coverprofile=ocpp201.out -coverpkg=github.com/lorenzodonini/ocpp-go/ocpp2.0.1/... github.com/lorenzodonini/ocpp-go/ocpp2.0.1_test
         sed '1d;$d' ocpp16.out >> coverage.out
         sed '1d;$d' ocpp201.out >> coverage.out
 
   integration_test:
-    image: cimg/go:1.22.5
+    image: cimg/go:1.24.3
     # The tests might require permissions to write to coverage out files.
     # If you encounter issues with permissions, you can try running the container as root.
     user: root
@@ -38,6 +38,6 @@ services:
     command:
       - /bin/bash
       - -c
-      - go test ./ws -v -covermode=count -coverprofile=integration_coverage.out
+      - go test -race ./ws -v -covermode=atomic -coverprofile=integration_coverage.out
     volumes:
       - .:/etc/ocpp-go:rw
